syntax = "proto3";

option go_package = "github.com/packethost/rover/protos/rover";

import "google/protobuf/empty.proto";
import "github.com/packethost/rover/protos/workflow/workflow.proto";

package github.com.packethost.rover.protos.rover;

service Rover {
    rpc GetWorkflowContexts(WorkflowContextRequest) returns (WorkflowContextList) {}
    rpc GetWorkflowActions(WorkflowActionsRequest) returns (WorkflowActionList) {}
    rpc ReportActionStatus(github.com.packethost.rover.protos.workflow.WorkflowActionStatus) returns (google.protobuf.Empty) {}
}

message WorkflowContextRequest {
    string worker_id = 1;
}

message WorkflowContextList {
    repeated github.com.packethost.rover.protos.workflow.WorkflowContext workflow_contexts = 1;
}

message WorkflowActionsRequest {
    string workflow_id = 1;
}

message WorkflowAction {
    string task_name = 1;
    string name = 2;
    string image = 3;
    int64 timeout = 4;
    string command = 5;
    string on_timeout = 6;
    string on_failure = 7;
    string worker_id = 8;
}

message WorkflowActionList {
    repeated WorkflowAction action_list = 1;
}
